[gd_scene load_steps=9 format=3 uid="uid://v5wfel75jq1h"]

[ext_resource type="Script" uid="uid://n51lk83yitjg" path="res://interactables/interactable.gd" id="1_7t3he"]
[ext_resource type="Texture2D" uid="uid://bqvngo254c8b6" path="res://level/items/доска/доска объявлений свечение.png" id="2_7t3he"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdhm5"]
resource_local_to_scene = true
size = Vector2(55, 115)

[sub_resource type="Animation" id="Animation_vcpxx"]
length = 0.001

[sub_resource type="Animation" id="Animation_u8m82"]
resource_name = "blink"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.03333333, 0.53333336),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_d0780"]
resource_name = "pulsing"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glow:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.53333336, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.2509804), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hoqj0"]
resource_name = "pulsing_rapid"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glow:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.97, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1.0961504, 1.0961504, 1.0961504, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hoqj0"]
_data = {
&"RESET": SubResource("Animation_vcpxx"),
&"blink": SubResource("Animation_u8m82"),
&"pulsing": SubResource("Animation_d0780"),
&"pulsing_rapid": SubResource("Animation_hoqj0")
}

[node name="Interactable" type="Node2D"]
script = ExtResource("1_7t3he")
animation_name = ""

[node name="Interact_popup" type="Label" parent="."]
visible = false
z_index = 100
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -50.0
offset_right = 480.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0050871223
scale = Vector2(0.14714038, 0.1410034)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "Надпись"
horizontal_alignment = 1
vertical_alignment = 1

[node name="activate_timer" type="Timer" parent="."]

[node name="Glow" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.50980395)
self_modulate = Color(1, 1, 1, 0.4421569)
position = Vector2(2.0000076, -0.9999924)
scale = Vector2(0.28867525, 0.29658565)
texture = ExtResource("2_7t3he")

[node name="Sprite" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.25)
shape = SubResource("RectangleShape2D_kdhm5")

[node name="animGlow" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hoqj0")
}

[connection signal="timeout" from="activate_timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
